--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </p>
 </td>
 <td style="padding:2.5%;width:40%;max-width:40%">
-<a href="profile.jpg"><img alt="profile photo" class="hoverZoomLink" src="profile.jpg" style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;"/></a>
+<a href="profile.JPG"><img alt="profile photo" class="hoverZoomLink" src="profile.JPG" style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;"/></a>
 </td>
 </tr>
 </tbody></table><table align="center">
